--- a/templates/home/transport.html.twig
+++ b/templates/home/transport.html.twig
@@ -1,8 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello HomeController!{% endblock %}
-{% block section %}
-<h1>hey</h1>
+{% block section6 %}
+<div class="container"> <!-- Div contenant pour centrer le formulaire -->
+    <div class="row justify-content-center"> <!-- Pour centrer horizontalement -->
+        <div class="col-md-6"> <!-- Colonne de taille moyenne, ajustez selon vos besoins -->
+            {{ form_start(f, {'attr': {'class': 'form'}}) }}
+            <div class="form-group">
+                {{ form_label(f.destinationVoyage, 'Destination du voyage', {'label_attr': {'class': 'vendor/bootstrap/css/control-label label-blue'}}) }}
+                {{ form_widget(f.destinationVoyage, {'attr': {'class': 'vendor/bootstrap/css/form-control col-sm-4'}}) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(f.dateDepart, 'Date de départ', {'label_attr': {'class': 'control-label label-blue'}}) }}
+                {{ form_widget(f.dateDepart, {'attr': {'class': 'vendor/bootstrap/css/form-control col-sm-4'}}) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(f.station, 'Station', {'label_attr': {'class': 'control-label label-blue'}}) }}
+                {{ form_widget(f.station, {'attr': {'class': 'vendor/bootstrap/css/form-control col-sm-4'}}) }}
+            </div>
+            <button type="submit" class="btn btn-primary">Enregistrer</button>
+            {{ form_end(f) }}
+        </div>
+    </div>
+</div>
+
+
+
 {% endblock %}
 {% block body %}
 <h1>.</h1>
