--- a/templates/home/sign_up.html.twig
+++ b/templates/home/sign_up.html.twig
@@ -2,8 +2,8 @@
 
 {% block title %}E-city{% endblock %}
 {% block section %}
-<h1></h1>
+<h1>S'inscrire</h1>
 {% endblock %}
 {% block body %}
-<h1></h1>
+
 {% endblock %}
