--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,12 @@
 {% block head %}
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{% block title %}Index - Mentor Bootstrap Template{% endblock %}</title>
+  <title>{% block title %}Ecity{% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{{ asset ('img/favicon.png') }}" rel="icon">
+  <link href="{{ asset ('img/icone.png') }}" rel="icon">
   <link href="{{ asset ('img/apple-touch-icon.png') }}" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -52,7 +52,7 @@
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Acceuil</a></li>
+          <li><a  href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
           <li><a href="about.html">Santé</a></li>
           <li><a href="courses.html">Shopping</a></li>
           <li><a href="{{ path ('app_transport')}}">Transport</a></li>
