--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
 {% block head %}
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{% block title %}Ecity{% endblock %}</title>
+  <title>{% block title %}E-city{% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,10 +45,10 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="{{ path ('app_acceuil')}}" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="{{ asset ('img/logo.png') }}" alt=""> -->
-        <h1 class="">Mentor</h1>
+        <h1  class="" >E-city</h1>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -62,7 +62,8 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="courses.html">Get Started</a>
+      <a class="btn-getstarted" href="{{ path ('app_client_new')}}">S'inscrire</a>
+
     </div>
   </header>
     {% endblock %}
@@ -98,7 +99,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="{{ path ('app_acceuil')}}" class="logo d-flex align-items-center">
             <span class="">Mentor</span>
           </a>
           <div class="footer-contact pt-3">
