--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}New Client{% endblock %}
-
-{% block body %}
-    <h1>Create new Client</h1>
+{% block section %}
+   <h1>Create new Client</h1>
 
     {{ include('client/_form.html.twig') }}
 
     <a href="{{ path('app_client_index') }}">back to list</a>
+{% endblock %}
+{% block body %}
+
 {% endblock %}
