--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Client{% endblock %}
+{% block title %}E-city{% endblock %}
 {% block section %}
    <h1>Create new Client</h1>
 
