--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,7 +44,109 @@
 :root {
   scroll-behavior: smooth;
 }
+/*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+.btn-centered {
+  position: fixed; /* Utilisation de position fixe pour maintenir la position même en zoomant */
+  top: 50%; /* Placer le bouton à 50% de la hauteur de la fenêtre */
+  left: 50%; /* Placer le bouton à 50% de la largeur de la fenêtre */
+  transform: translate(-50%, -50%); /* Déplacer le bouton de moitié de sa propre largeur et hauteur dans les deux directions pour le centrer */
+  transition: 0.5s;
+  background-color: #B0E847;
+  color: black;
+  font-weight: bold;
+  border: none;
+  font-size: 18px;
+  width: 186px;
+  height: 43px;
 
+}
+.btn-centered:hover{
+  background-color: #7cc576; /* Couleur de fond au survol */
+    color: bl; /* Couleur du texte au survol */
+}
+#hero {
+  width: 100%;
+  height: 100%;
+  background: url("../img/background.png")  no-repeat;
+  background-size: cover; /* Cover the entire container */
+  background-attachment: fixed; /* Fixed position */
+  position: relative;
+}
+
+#hero .hero-container {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 15px;
+}
+
+#hero .hero-logo {
+  margin-bottom: 30px;
+}
+
+#hero h1 {
+  margin: 0 0 30px 0;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 56px;
+  color: #fff;
+}
+
+#hero h2 {
+  color: #aeaeae;
+  margin-bottom: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+#hero .btn-get-started {
+  position: absolute; top: 422px; left: 557px;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 14px 30px;
+  border-radius: 3px;
+  margin: 10px;
+  color: black;
+  background:  #B0E847;
+}
+
+#hero .btn-get-started:hover {
+  transition: 0.5s;
+  background: #fff;
+  color: #7cc576;
+}
+
+@media (min-width: 1024px) {
+  #hero {
+    background-attachment: fixed;
+  }
+}
+
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  #hero h2 {
+    line-height: 22px;
+  }
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
