--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,8 @@
 
   <!-- Main CSS File -->
   <link href="{{ asset ('css/main.css') }}" rel="stylesheet">
-
+   <link href="{{ asset ('css/formulairebillet.css') }}" rel="stylesheet">
+ <link href="{{ asset ('css/tableaubillet.css') }}" rel="stylesheet">
   <!-- =======================================================
   * Template Name: Mentor
   * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
@@ -168,6 +169,7 @@
   <div id="preloader"></div>
 {% block js %}
   <!-- Vendor JS Files -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
   <script src="{{asset('vendor/php-email-form/validate.js') }}"></script>
   <script src="{{asset('vendor/aos/aos.js') }}"></script>
@@ -177,6 +179,7 @@
 
   <!-- Main JS File -->
   <script src="{{ asset ('js/main.js') }}"></script>
+  
 {% endblock %}
 </body>
 
