--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
           <li><a href="courses.html">Shopping</a></li>
           <li><a href="{{ path ('app_transport')}}">Transport</a></li>
           <li><a href="events.html">Parking</a></li>
-          <li><a href="pricing.html">Tourisme</a></li>
+          <li><a href="{{ path ('app_tourisme')}}">Tourisme</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
