--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}E-city{% endblock %}
+{% block title %}E-CITY!{% endblock %}
    {% block section3 %}
     <section id="counts" class="section counts">
 
@@ -406,5 +406,6 @@
     </section><!-- /Trainers Index Section -->
 {% endblock %}
 {% block body %}
+<h1></h1>
 {% endblock %}
 
