--- a/templates/home/sign_up.html.twig
+++ b/templates/home/sign_up.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}E-city{% endblock %}
+{% block title %}S'inscrire!{% endblock %}
 {% block section %}
 <h1>S'inscrire</h1>
 {% endblock %}
