--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,13 +5,13 @@
 {% block head %}
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{% block title %}E-city{% endblock %}</title>
+<title>{% block title %}E-city{% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="{{ asset ('img/icone.png') }}" rel="icon">
-  <link href="{{ asset ('img/apple-touch-icon.png') }}" rel="apple-touch-icon">
+    <link href="{{ asset ('img/apple-touch-icon.png') }}" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -45,14 +45,14 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="{{ path ('app_acceuil')}}" class="logo d-flex align-items-center me-auto">
+      <a href="{{ path ('app_acceuil')}}"  class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="{{ asset ('img/logo.png') }}" alt=""> -->
-        <h1  class="" >E-city</h1>
+        <h1 class="">E-CITY</h1>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a  href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
+          <li><a href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
           <li><a href="about.html">Santé</a></li>
           <li><a href="courses.html">Shopping</a></li>
           <li><a href="{{ path ('app_transport')}}">Transport</a></li>
@@ -62,7 +62,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="{{ path ('app_client_new')}}">S'inscrire</a>
+     <a class="btn-getstarted" href="{{ path ('app_client_new')}}">S'inscrire</a>
 
     </div>
   </header>
@@ -99,14 +99,14 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="{{ path ('app_acceuil')}}" class="logo d-flex align-items-center">
+          <a href="index.html" class="logo d-flex align-items-center">
             <span class="">Mentor</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Ariana cité Ghazela</p>
+            <p>Tunis, TN 535022</p>
+            <p class="mt-3"><strong>Fix:</strong> <span>+216 71 234 567</span></p>
+            <p><strong>Email:</strong> <span>ecity.tunis2000@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter"></i></a>
@@ -119,7 +119,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="{{ path ('app_acceuil')}}">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
