--- a/templates/client/_delete_form.html.twig
+++ b/templates/client/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_client_delete', {'idPersonne': client.idPersonne}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ client.idPersonne) }}">
+<form method="post" action="{{ path('app_client_delete', {'id_personne': client.id_personne}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ client.id_personne) }}">
     <button class="btn">Delete</button>
 </form>
