--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Edit Client{% endblock %}
-
-{% block body %}
-    <h1>Edit Client</h1>
+{% block section %}
 
     {{ include('client/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_client_index') }}">back to list</a>
 
     {{ include('client/_delete_form.html.twig') }}
+{% endblock %}
+{% block body %}
+
 {% endblock %}
