--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}E-city{% endblock %}
+{% block title %}New Client{% endblock %}
 {% block section %}
-   <h1>Create new Client</h1>
+
 
     {{ include('client/_form.html.twig') }}
 
