--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -8,32 +8,32 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>IdPersonne</th>
-                <td>{{ client.idPersonne }}</td>
+                <th>Id_personne</th>
+                <td>{{ client.id_personne }}</td>
             </tr>
             <tr>
-                <th>NomPersonne</th>
-                <td>{{ client.nomPersonne }}</td>
+                <th>Nom_personne</th>
+                <td>{{ client.nom_personne }}</td>
             </tr>
             <tr>
-                <th>PrenomPersonne</th>
-                <td>{{ client.prenomPersonne }}</td>
+                <th>Prenom_personne</th>
+                <td>{{ client.prenom_personne }}</td>
             </tr>
             <tr>
-                <th>NumeroTelephone</th>
-                <td>{{ client.numeroTelephone }}</td>
+                <th>Numero_telephone</th>
+                <td>{{ client.numero_telephone }}</td>
             </tr>
             <tr>
-                <th>MailPersonne</th>
-                <td>{{ client.mailPersonne }}</td>
+                <th>Mail_personne</th>
+                <td>{{ client.mail_personne }}</td>
             </tr>
             <tr>
-                <th>MdpPersonne</th>
-                <td>{{ client.mdpPersonne }}</td>
+                <th>Mdp_personne</th>
+                <td>{{ client.mdp_personne }}</td>
             </tr>
             <tr>
-                <th>ImagePersonne</th>
-                <td>{{ client.imagePersonne }}</td>
+                <th>Image_personne</th>
+                <td>{{ client.image_personne }}</td>
             </tr>
             <tr>
                 <th>Genre</th>
@@ -48,7 +48,7 @@
 
     <a href="{{ path('app_client_index') }}">back to list</a>
 
-    <a href="{{ path('app_client_edit', {'idPersonne': client.idPersonne}) }}">edit</a>
+    <a href="{{ path('app_client_edit', {'id_personne': client.id_personne}) }}">edit</a>
 
     {{ include('client/_delete_form.html.twig') }}
 {% endblock %}
