--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -1,9 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Profile!{% endblock %}
 {% block section %}
-<h1>hey</h1>
+<h1>Profile</h1>
 {% endblock %}
 {% block body %}
-<h1>.</h1>
 {% endblock %}
