--- a/templates/Front/parking.html.twig
+++ b/templates/Front/parking.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'Front/base.html.twig' %}
 
 {% block title %}Hello ParkingController!{% endblock %}
 {% block css %}
