--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'Front/base.html.twig' %}
 
 {% block title %}E-CITY!{% endblock %}
    {% block section3 %}
@@ -78,8 +78,8 @@
       <img src="{{ asset('img/hero-bg.jpg') }}" alt="" data-aos="fade-in">
 
       <div class="container">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">Learning Today,<br>Leading Tomorrow</h2>
-        <p data-aos="fade-up" data-aos-delay="200">We are team of talented designers making websites with Bootstrap</p>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">Dynamiser le présent,<br>Innover  le futur</h2>
+        <p data-aos="fade-up" data-aos-delay="200">Bienvenue sur e-City, votre destination intelligente où la vie devient plus facile grâce à une gamme complète de services pour vos besoins quotidiens.</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
           <a href="courses.html" class="btn-get-started">Get Started</a>
         </div>
