--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -50,7 +50,7 @@
         <!-- <img src="{{ asset ('img/logo.png') }}" alt=""> -->
         <h1 class="">E-CITY</h1>
       </a>
-      <nav id="navmenu" class="navmenu">
+ <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
           <li><a href="about.html">Santé</a></li>
@@ -63,7 +63,6 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
      <a class="btn-getstarted" href="{{ path ('app_client_new')}}">S'inscrire</a>
-
     </div>
   </header>
     {% endblock %}
@@ -130,11 +129,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="{{ path ('app_acceuil')}}">Santé</a></li>
+            <li><a href="#">Shopping</a></li>
+            <li><a href="#">Transport</a></li>
+            <li><a href="#">Parking</a></li>
+            <li><a href="#">Tourisme</a></li>
           </ul>
         </div>
 
