--- a/templates/Front/sign_up.html.twig
+++ b/templates/Front/sign_up.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'Front/base.html.twig' %}
 
 {% block title %}S'inscrire!{% endblock %}
 {% block section %}
