--- a/templates/Back/medecin/showDoctors.html.twig
+++ b/templates/Back/medecin/showDoctors.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
-{% block body %}
+{% extends 'Back/base.html.twig' %}
+{% block main %}
     <h1>{{ 'List des medecins'|trans }}</h1>
 
   <style>
