--- a/templates/Back/medecin/editDoctor.html.twig
+++ b/templates/Back/medecin/editDoctor.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'Back/base.html.twig' %}
 {# templates/task/new.html.twig #}
 
-{% block body %}
+{% block main %}
 <div style="display: flex; align-items: center;">
     <div style="margin-right: 159px;">
         {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'style': 'margin: 90px;'}}) }}
