--- a/templates/Front/parking.html.twig
+++ b/templates/Front/parking.html.twig
@@ -1,8 +1,7 @@
 {% extends 'Front/base.html.twig' %}
 
-{% block title %}Profile!{% endblock %}
+{% block title %}Hello HomeController!{% endblock %}
 {% block section %}
-<h1>Profile</h1>
 {% endblock %}
 {% block body %}
 {% endblock %}
