--- a/templates/Front/client/_form.html.twig
+++ b/templates/Front/client/_form.html.twig
@@ -1,30 +1,45 @@
-<div style="display: flex; justify-content: center;">
 
-{{ form_start(form) }}
-    {{ form_row(form.nom_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre nom'}}) }}
-    {{ form_errors(form.nom_personne) }}
-    
-    {{ form_row(form.prenom_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre prenom'}}) }}
-    {{ form_errors(form.prenom_personne) }}
-
-    {{ form_row(form.numero_telephone, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre numero de telephone'}}) }}
-    {{ form_errors(form.numero_telephone) }}
-
-    {{ form_row(form.genre, {'attr': {'class': 'form-control'}}) }}
-    {{ form_errors(form.genre) }}
-
-    {{ form_row(form.age, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre age'}}) }}
-    {{ form_errors(form.age) }}
-
-    {{ form_row(form.mail_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre adresse mail'}}) }}
-    {{ form_errors(form.mail_personne) }}
-
-    {{ form_row(form.mdp_personne, {'attr': {'class': 'form-control', 'placeholder': 'Choisissez le mot de passe'}}) }}
-    {{ form_errors(form.mdp_personne) }}
-        
-    {{ form_row(form.image_personne, {'attr': {'class': 'form-control', 'placeholder': 'url de votre image'}}) }}
-    {{ form_errors(form.image_personne) }}
-
-    <button type="submit" class="btn">{{ button_label|default("S'inscrire") }}</button>
-{{ form_end(form) }}
+<div class="card">
+	<div class="card-body">
+      <div class="m-sm-4">
+        {{ form_start(form) }}
+            <div class="mb-3">
+                {{ form_row(form.nom_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre nom'}}) }}
+                {{ form_errors(form.nom_personne) }}
+            </div>   
+            <div class="mb-3">
+                {{ form_row(form.prenom_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre prenom'}}) }}
+                {{ form_errors(form.prenom_personne) }}
+            </div>   
+            <div class="mb-3">
+                {{ form_row(form.numero_telephone, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre numero de telephone'}}) }}
+                {{ form_errors(form.numero_telephone) }}
+            </div>
+            <div class="mb-3">
+                {{ form_row(form.genre, {'attr': {'class': 'form-control'}}) }}
+                {{ form_errors(form.genre) }}
+            </div>
+            <div class="mb-3">
+                {{ form_row(form.age, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre age'}}) }}
+                {{ form_errors(form.age) }}
+            </div>
+            <div class="mb-3">
+                {{ form_row(form.mail_personne, {'attr': {'class': 'form-control', 'placeholder': 'Entrer votre adresse mail'}}) }}
+                {{ form_errors(form.mail_personne) }}
+            </div>
+            <div class="mb-3">
+                {{ form_row(form.mdp_personne, {'attr': {'class': 'form-control', 'placeholder': 'Choisissez le mot de passe'}}) }}
+                {{ form_errors(form.mdp_personne) }}
+            </div>   
+            <div class="mb-3">
+                {{ form_row(form.image_personne, {'attr': {'class': 'form-control', 'placeholder': 'url de votre image'}}) }}
+                {{ form_errors(form.image_personne) }}
+            </div>
+            <div class="mb-3">
+                <button type="submit" class="btn">{{ button_label|default("S'inscrire") }}</button>
+            </div>
+        {{ form_end(form) }}
+	  </div>
+	</div>
 </div>
+              
