--- a/templates/Front/client/new.html.twig
+++ b/templates/Front/client/new.html.twig
@@ -1,13 +1,37 @@
 {% extends 'Front/base.html.twig' %}
 
-{% block title %}New Client{% endblock %}
+{% block title %}E-CITY{% endblock %}
+
 {% block section %}
+<main class="main">
 
+    <!-- Page Title -->
+    <div class="page-title" data-aos="fade">
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1>S'inscrire</h1>
+              <p class="mb-0">Préparez-vous à vivre une expérience immersive et intuitive en rejoignant notre communauté e-City.<br>
+                        Inscrivez-vous dès maintenant pour accéder à un univers de services intelligents et connectés,<br>
+                        conçus pour simplifier et enrichir votre vie urbaine.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    {{ include('Front/client/_form.html.twig') }}
-
-    <a href="{{ path('app_client_index') }}">back to list</a>
+    </div><!-- End Page Title -->
+ <div>
+        {{ include('Front/client/_form.html.twig') }}
+        <a href="{{ path('app_client_index') }}">Retour à la liste</a>
+    </div>
+</main>
+ 
 {% endblock %}
+
+
 {% block body %}
+
+  
 
 {% endblock %}
