--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -11,35 +11,36 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="1232" data-purecounter-duration="1" class="purecounter"></span>
-              <p class="">Students</p>
+              <p class="">Clients</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1" class="purecounter"></span>
-              <p class="">Courses</p>
+              <p class="">Reservations</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
-              <p class="">Events</p>
+              <p class="">Commandes</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
               <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-              <p class="">Trainers</p>
+              <p class="">Administrateur</p>
             </div>
           </div><!-- End Stats Item -->
-        </div>
+
 
       </div>
 
-    </section><!-- /Counts Section -->{% endblock %}
+    </section><!-- /Counts Section -->
+    {% endblock %}
    {% block section2 %}
     <section id="about" class="about section">
 
@@ -75,13 +76,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="{{ asset('img/hero-bg.jpg') }}" alt="" data-aos="fade-in">
+      <img src="{{ asset('img/background.png') }}" alt="" data-aos="fade-in">
 
       <div class="container">
         <h2 data-aos="fade-up" data-aos-delay="100" class="">Dynamiser le présent,<br>Innover  le futur</h2>
         <p data-aos="fade-up" data-aos-delay="200">Bienvenue sur e-City, votre destination intelligente où la vie devient plus facile grâce à une gamme complète de services pour vos besoins quotidiens.</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="courses.html" class="btn-get-started">Get Started</a>
+          <a  href="{{ path ('app_client_new')}}" class="btn-get-started">Get Started</a>
         </div>
       </div>
 {% endblock %}
@@ -406,6 +407,5 @@
     </section><!-- /Trainers Index Section -->
 {% endblock %}
 {% block body %}
-<h1></h1>
 {% endblock %}
 
