admin-client-personne

--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Front/base.html.twig' %}
 
-{% block title %}E-CITY!{% endblock %}
+{% block title %}E-CITY{% endblock %}
    {% block section3 %}
     <section id="counts" class="section counts">
 
