add & delete RendezVous completed for front office

--- a/templates/Front/rendez_vous/showRV.html.twig
+++ b/templates/Front/rendez_vous/showRV.html.twig
@@ -1,1 +1,62 @@
-hello 
+{% extends 'Front/base.html.twig' %}
+{# templates/task/new.html.twig #}
+
+{% block body %}
+      <h1>{{ 'Mes RendezVous'|trans }}</h1>
+
+  <style>
+    table {
+        margin: 10px;
+        width: 30px; /* Adjust this value as needed */
+    } 
+</style>
+
+    <table class="table table-striped table-middle-aligned table-borderless" style=" width: 70%;">
+        <thead>
+            <tr>
+                {# <th scope="col">{{ 'Nom'|trans }}</th> #}
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Dr.Nom'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Specialite'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Date RendezVous'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Numero Tel'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Adresse'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i>    Actions </th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for rv in lesRVdeClient %}
+            <tr>
+                {# <td>{{ dump(rv.getIdMedecin.addressMedecin()) }}</td> #}
+                <td>{{ rv.getIdMedecin.getNomMedecin() }}</td>
+                <td>{{ rv.getIdMedecin().getSpecialiteMedecin() }}</td>
+                <td>{{ rv.getDateRendezVous().format('d/m/Y H:i') }}</td>
+                <td>{{ rv.getIdMedecin().getNumeroTelephoneMedecin() }}</td>
+                <td>{{ rv.getIdMedecin().getAddressMedecin() }}</td>
+              
+                {# it's not mandatory to set the timezone in localizeddate(). This is done to
+                   avoid errors when the 'intl' PHP extension is not available and the application
+                   is forced to use the limited "intl polyfill", which only supports UTC and GMT #}
+
+                <td class="text-right">
+                    <div class="item-actions">
+                        <a href="{{ path('app_rendezVous_delete', {id: rv.getRefRendezVous() }) }}" class="btn btn-sm btn-secondary">
+                            <i class="fa fa-eye" aria-hidden="true"></i> {{ 'delete'|trans }}
+                        </a>
+
+                        {# <a href="{{ path('app_medecin_edit', {id: doctor.idMedecin}) }}" class="btn btn-sm btn-primary">
+                            <i class="fa fa-edit" aria-hidden="true"></i> {{ 'edit'|trans }}
+                        </a>  #}
+                    </div>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6" align="center">{{ 'post.no_posts_found'|trans }}</td>
+           </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <a href="{{ path('app_rendezVous_add') }}" class="btn btn-sm btn-primary">
+             <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Rendez Vous'|trans }}
+    </a>
+{% endblock %}
