--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -49,6 +49,17 @@
 						<a class="sidebar-link" href="{{ path ('app_medecin_getAll')}}">
               <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Gestion Medecin</span>
             </a>
+        </a>
+
+				<ul class="sidebar-nav">
+					<li class="sidebar-header">
+						Pages
+					</li>
+
+					<li class="sidebar-item active">
+						<a class="sidebar-link" href="{{ path ('app_medecin_getAll')}}">
+              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Gestion RendezVous</span>
+            </a>
 					</li>
 
 					<li class="sidebar-item">
