--- a/templates/Front/rendez_vous/addRendezVous.html.twig
+++ b/templates/Front/rendez_vous/addRendezVous.html.twig
@@ -8,6 +8,6 @@
         {{ form_widget(form) }}
         {{ form_end(form) }}
     </div>
-    <img src="{{ asset('img/imgGM/medecinIcon.jpg') }}" alt="Image Description" style="width: 500px; height: auto;">
+    <img src="{{ asset('img/imgGM/rendezVous.png') }}" alt="Image Description" style="width: 500px; height: auto;">
 </div>
 {% endblock %}
