--- a/templates/Front/rendez_vous/editRendezVous.html.twig
+++ b/templates/Front/rendez_vous/editRendezVous.html.twig
@@ -1,13 +1,13 @@
-{% extends 'Back/base.html.twig' %}
+{% extends 'Front/base.html.twig' %}
 {# templates/task/new.html.twig #}
 
-{% block main %}
+{% block body %}
 <div style="display: flex; align-items: center;">
     <div style="margin-right: 159px;">
         {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'style': 'margin: 90px;'}}) }}
         {{ form_widget(form) }}
         {{ form_end(form) }}
     </div>
-    <img src="{{ asset('img/imgGM/rendezVous.png') }}" alt="Image Description" style="width: 600px; height: auto;">
+    <img src="{{ asset('img/imgGM/medecinIcon.jpg') }}" alt="Image Description" style="width: 500px; height: auto;">
 </div>
 {% endblock %}
