--- a/templates/Front/rendez_vous/showRV.html.twig
+++ b/templates/Front/rendez_vous/showRV.html.twig
@@ -39,13 +39,13 @@
 
                 <td class="text-right">
                     <div class="item-actions">
-                        <a href="{{ path('app_rendezVous_delete', {id: rv.getRefRendezVous() }) }}" class="btn btn-sm btn-secondary">
+                        <a href="{{ path('front_rendezVous_delete', {id: rv.getRefRendezVous() }) }}" class="btn btn-sm btn-secondary">
                             <i class="fa fa-eye" aria-hidden="true"></i> {{ 'delete'|trans }}
                         </a>
 
-                        {# <a href="{{ path('app_medecin_edit', {id: doctor.idMedecin}) }}" class="btn btn-sm btn-primary">
+                        <a href="{{ path('front_rendezVous_edit', {id: rv.getRefRendezVous()}) }}" class="btn btn-sm btn-primary">
                             <i class="fa fa-edit" aria-hidden="true"></i> {{ 'edit'|trans }}
-                        </a>  #}
+                        </a> 
                     </div>
                 </td>
             </tr>
@@ -56,7 +56,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_rendezVous_add') }}" class="btn btn-sm btn-primary">
+    <a href="{{ path('front_rendezVous_add') }}" class="btn btn-sm btn-primary">
              <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Rendez Vous'|trans }}
     </a>
 {% endblock %}
