CRUD front and back completed without control of input

--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -57,7 +57,7 @@
 					</li>
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="{{ path ('app_medecin_getAll')}}">
+						<a class="sidebar-link" href="{{ path ('back_rendezVous_getAll')}}">
               <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Gestion RendezVous</span>
             </a>
 					</li>
