--- a/templates/Back/rendezVous/showAllRvInDB.html.twig
+++ b/templates/Back/rendezVous/showAllRvInDB.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Back/base.html.twig' %}
 {% block main %}
-    <h1>{{ 'List des medecins'|trans }}</h1>
+    <h1>{{ 'List de tous les rendez-vous'|trans }}</h1>
 
   <style>
     table {
@@ -12,32 +12,31 @@
     <table class="table table-striped table-middle-aligned table-borderless" style=" width: 70%;">
         <thead>
             <tr>
-                <th scope="col">{{ 'Nom'|trans }}</th>
-                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Prenom'|trans }}</th>
-                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Numero Tel'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Client'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Dr.Nom'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Specialite'|trans }}</th>
+                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Date RV'|trans }}</th>
                 <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Adresse'|trans }}</th>
-                <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i> {{ 'Specialité'|trans }}</th>
                 <th scope="col"><i class="fa fa-calendar" aria-hidden="true"></i>    Actions </th>
             </tr>
         </thead>
         <tbody>
-        {% for doctor in doctors %}
+        {% for rv in lesRVdeClient %}
             <tr>
-                <td>{{ doctor.nomMedecin }}</td>
-                {# it's not mandatory to set the timezone in localizeddate(). This is done to
-                   avoid errors when the 'intl' PHP extension is not available and the application
-                   is forced to use the limited "intl polyfill", which only supports UTC and GMT #}
-                <td>{{ doctor.prenomMedecinMedecin }}</td>
-                <td>{{ doctor.numeroTelephoneMedecin }}</td>
-                <td>{{ doctor.addressMedecin }}</td>
-                <td>{{ doctor.specialiteMedecin }}</td>
+                <td>{{ rv.getClient().getPersonne().getNomPersonne() ~ " " ~ rv.getClient().getPersonne().getPrenomPersonne() }}</td>
+                <td>{{ "Dr." ~ rv.getIdMedecin().getNomMedecin }}</td>
+                <td>{{ "Dr." ~ rv.getIdMedecin().specialiteMedecin }}</td>
+                <td>{{ rv.getDateRendezVous().format('d/m/Y H:i')  }}</td>
+                <td>{{ rv.getIdMedecin().getAddressMedecin() }}</td>
+                
+                
                 <td class="text-right">
                     <div class="item-actions">
-                        <a href="{{ path('app_medecin_delete', {id: doctor.idMedecin}) }}" class="btn btn-sm btn-secondary">
+                        <a href="{{ path('back_rendezVous_delete', {id: rv.getRefRendezVous()}) }}" class="btn btn-sm btn-secondary">
                             <i class="fa fa-eye" aria-hidden="true"></i> {{ 'delete'|trans }}
                         </a>
 
-                        <a href="{{ path('app_medecin_edit', {id: doctor.idMedecin}) }}" class="btn btn-sm btn-primary">
+                        <a href="{{ path('back_rendezVous_edit', {id:  rv.getRefRendezVous()}) }}" class="btn btn-sm btn-primary">
                             <i class="fa fa-edit" aria-hidden="true"></i> {{ 'edit'|trans }}
                         </a>
                     </div>
@@ -50,8 +49,8 @@
         {% endfor %}
         </tbody>
     </table>
-     <a href="{{ path('app_medecin_add') }}" class="btn btn-sm btn-primary">
-    <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Medecin'|trans }}
+     <a href="{{ path('back_rendezVous_add') }}" class="btn btn-sm btn-primary">
+    <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter RendezVous'|trans }}
         </a>
 
 {% endblock %}
