--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="{{ asset ('img/logo.png') }}" alt=""> -->
-        <h1 class="">Mentor</h1>
+        <h1 class="">E-city</h1>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -98,7 +98,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="">Mentor</span>
+            <span class="">E-city</span>
           </a>
           <div class="footer-contact pt-3">
             <p>A108 Adam Street</p>
